--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
             "homepage": "https://www.benjaminsmith.com"
         }
     ],
+    "license": "MIT",
     "require": {
         "php": ">=5.5",
         "composer/installers": "~1.0",
